# sympy-mcp

./: Dockerfile  README.md  pyproject.toml  server.py
docker/: docker-compose.yml
docs/: architecture.md
sympy_mcp/: __init__.py  config.py  server.py  service.py  session.py  state.py  utils.py
sympy_mcp/features/calculus/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/expressions/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/functions/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/linear_algebra/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/relativity/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/session/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/solving/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/symbols/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/units/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/features/vector_calc/: instructions.md  models.py  routes.py  tool.py
sympy_mcp/shared/: models.py
tests/: conftest.py  test_calculus.py  test_linalg.py  test_relativity.py  test_server.py  test_units.py
