[project]
name = "sympy-mcp"
version = "0.1.0"
description = "A MCP server for symbolic manipulation of mathematical expressions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]==1.26.0",
    "sympy==1.14.0",
    "fastapi==0.135.1",
    "structlog==25.5.0",
    "mcp-weather",
    "requests==2.32.5",
    "fastmcp==3.1.0",
    "einsteinpy==0.4.0",
]

[project.scripts]
sympy-mcp = "sympy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
mcp-weather = { git = "https://github.com/geosp/mcp-weather.git" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
relativity = [
    "einsteinpy>=0.4.0",
]

[tool.uv]
default-groups = []

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
